add Open Graph and Twitter Card meta tags for improved sharing

--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;500&family=Noto+Sans+SC:wght@400;500;700&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <title>Senlin's Portfolio</title>
+    
+    <!-- Open Graph Protocol -->
+    <meta property="og:title" content="Senlin's Portfolio" />
+    <meta property="og:description" content="A modern web profile showcasing skills, projects and experience" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://senl.pages.dev/" />
+    <meta property="og:image" content="https://senl.pages.dev/preview.png" />
+    <meta property="og:site_name" content="Senlin's Portfolio" />
+    
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Senlin's Portfolio" />
+    <meta name="twitter:description" content="A modern web profile showcasing skills, projects and experience" />
+    <meta name="twitter:image" content="https://senl.pages.dev/preview.png" />
   </head>
   <body>
     <div id="root"></div>
